apps/kavita/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kavita
  namespace: books
spec:
  selector:
    app: kavita
  ports:
    - port: 50000
      targetPort: 5000
