apps/kavita/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kavita
  namespace: books
spec:
  hostnames:
    - kavita.tomasmerino.com
  parentRefs:
    - name: homelab-gateway
      namespace: networking
  rules:
    - backendRefs:
        - name: kavita
          port: 5000
